--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_chinese_keyboard
 description: A flutter package for Chinese input virtual keyboard.
 version: 0.0.1
-homepage:
+
+homepage: https://github.com/zhangredli
+repository: https://github.com/zhangredli/flutter_chinese_keyboard
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
@@ -9,8 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  charset: ^2.0.1
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter:
+  assets:
+    - lib/assets/
